Implement MAP_ALIGNED_CHERI and MAP_ALIGNED_CHERI_SEAL.
This implementation requires that `len` be rounded up appropriately for
large allocations and in the MAP_FIXED case requires that `addr` be
similarly aligned.

These macros act as both a sanity check on passed values as a constraint
when allocating fresh regions of address space. I expect that
implementing the constraint on the inbound path will reduce the number
of required code changes in CheriABI programs once CheriABI is modified to
request CHERI alignements by default.

--- a/lib/libc/sys/mmap.2
+++ b/lib/libc/sys/mmap.2
@@ -112,6 +112,37 @@ will fail.
 The
 .Fa n
 argument specifies the binary logarithm of the desired alignment.
+.It Dv MAP_ALIGNED_CHERI
+Align the region as required to allow a CHERI capability to be created.
+If a suitable region cannot be found or the address of
+.Fa addr
+or the length in
+.Fa len
+is not representable as a precise capability,
+.Fn mmap
+will fail.
+The
+.Dv MAP_ALIGNED_CHERI
+flag is assumed for CheriABI programs unless
+.Dv MAP_CHERI_NOSETBOUNDS
+is defined.
+On architectures without CHERI support or where all capabilities are
+precise,
+.Dv MAP_ALIGNED_CHERI
+has no effect.
+.It Dv MAP_ALIGNED_CHERI_SEAL
+Align the region as required to allow a CHERI capability to be sealed.
+If a suitable region cannot be found or the address of
+.Fa addr
+or the length in
+.Fa len
+is not representable as a precise, sealable capability,
+.Fn mmap
+will fail.
+On architectures without CHERI support or where all capabilities are
+precise,
+.Dv MAP_ALIGNED_CHERI_SEAL
+has no effect.
 .It Dv MAP_ALIGNED_SUPER
 Align the region to maximize the potential use of large
 .Pq Dq super
