Support 128-bit alignment requirements in CheriABI mmap().
Support MAP_CHERI_NOSETBOUNDS which avoids alignment requirements for
sub-mapping within an existing capability.

For requests without alignment requirements, add an appropriate one.

Validate the `addr` capability when called with MAP_FIXED.

Make generation of the capability returned by mmap() machine independent.

Permissions of capabilities returned by mmap will be addressed in
future commits.

--- a/lib/libc/sys/mmap.2
+++ b/lib/libc/sys/mmap.2
@@ -172,6 +172,16 @@ argument must be 0.
 This flag is identical to
 .Dv MAP_ANON
 and is provided for compatibility.
+.It Dv MAP_CHERI_NOSETBOUNDS
+This flag can only be used in combination with
+.Dv MAP_FIXED .
+In CheriABI, do not constrain the alignment of the capability, only
+require that mapping be possible at
+.Fa addr
+and that there be sufficient space in the capability for the request.
+The
+.Dv MAP_CHERI_NOSETBOUNDS
+flag is ignored by non-CheriABI programs.
 .It Dv MAP_EXCL
 This flag can only be used in combination with
 .Dv MAP_FIXED .
