Add a new ktrace facility to trace system call error causes.
The mechanism is just a formatted string.

--- a/usr.bin/ktrace/ktrace.1
+++ b/usr.bin/ktrace/ktrace.1
@@ -123,6 +123,8 @@ trace
 trace namei translations
 .It Cm p
 trace capability check failures
+.It Cm S
+trace system call error causes
 .It Cm s
 trace signal processing
 .It Cm t
