--- a/usr.bin/ktrace/ktrace.1
+++ b/usr.bin/ktrace/ktrace.1
@@ -28,7 +28,7 @@
 .\"	@(#)ktrace.1	8.1 (Berkeley) 6/6/93
 .\" $FreeBSD$
 .\"
-.Dd August 6, 2015
+.Dd March 31, 2016
 .Dt KTRACE 1
 .Os
 .Sh NAME
@@ -181,7 +181,8 @@ on process 67
 # disable tracing of all user-owned processes
 .Dl $ ktrace -C
 .Sh SEE ALSO
-.Xr kdump 1
+.Xr kdump 1 ,
+.Xr ktrace 2
 .Sh HISTORY
 The
 .Nm
