--- a/usr.bin/qtrace/qtrace.1
+++ b/usr.bin/qtrace/qtrace.1
@@ -1,5 +1,5 @@
 .\"-
-.\" Copyright (c) 2016 (holder)
+.\" Copyright (c) 2016 SRI International
 .\" All rights reserved.
 .\"
 .\" This software was developed by SRI International and the University of
