Update the vgrind manpage with the new path

--- a/usr.bin/vgrind/vgrind.1
+++ b/usr.bin/vgrind/vgrind.1
@@ -28,7 +28,7 @@
 .\"     @(#)vgrind.1	8.1 (Berkeley) 6/6/93
 .\" $FreeBSD$
 .\"
-.Dd August 29, 2006
+.Dd October 8, 2016
 .Dt VGRIND 1
 .Os
 .Sh NAME
@@ -181,7 +181,7 @@ as argument.
 .Bl -tag -width /usr/share/misc/vgrindefsxx -compact
 .It Pa index
 file where source for index is created
-.It Pa /usr/share/tmac/tmac.vgrind
+.It Pa /usr/share/doctools/tmac/tmac.vgrind
 macro package
 .It Pa /usr/libexec/vfontedpr
 preprocessor
