--- a/usr.sbin/mptutil/mptutil.8
+++ b/usr.sbin/mptutil/mptutil.8
@@ -27,7 +27,8 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd August 16, 2009
+.Dd May 24, 2024
+.\"
 .Dt MPTUTIL 8
 .Os
 .Sh NAME
@@ -69,7 +70,7 @@
 .Nm
 .Op Fl u Ar unit
 .Cm volume cache Ar volume
-.Ar enable|disable
+.Ar enable|enabled|disable|disabled
 .Nm
 .Op Fl u Ar unit
 .Cm clear
@@ -237,7 +238,7 @@ Sets the name of
 .Ar volume
 to
 .Ar name .
-.It Cm volume cache Ar volume Ar enable|disable
+.It Cm volume cache Ar volume Ar enable|enabled|disable|disabled
 Enables or disables the drive write cache for the member drives of
 .Ar volume .
 .It Cm volume status Ar volume
