ktrace: Describe CAPFAIL trace point in man page
Update the ktrace(1) man page to describe the recently improved
capability failure tracing.

Approved by:	markj (mentor)
Reviewed by:	markj
MFC after:	1 month
Differential Revision:	https://reviews.freebsd.org/D44886

(cherry picked from commit 4f2ada0d88219746fdfbc0907c28b0950ad18725)

--- a/usr.bin/ktrace/ktrace.1
+++ b/usr.bin/ktrace/ktrace.1
@@ -27,7 +27,7 @@
 .\"
 .\"	@(#)ktrace.1	8.1 (Berkeley) 6/6/93
 .\"
-.Dd August 26, 2019
+.Dd April 20, 2024
 .Dt KTRACE 1
 .Os
 .Sh NAME
@@ -153,6 +153,21 @@ The
 and
 .Ar command
 options are mutually exclusive.
+.Sh CAPABILITY VIOLATION TRACING
+When the
+.Cm p
+trace point is specified,
+.Nm
+will record
+.Xr capsicum 4
+capability mode violations made by the traced process.
+Violations will be logged regardless of whether the process has actually
+entered capability mode.
+.Pp
+For developers that are interested in Capsicumizing their programs, the
+.Cm c , n , p
+trace points can help quickly identify any system calls and path lookups that
+are triggering violations.
 .Sh EXAMPLES
 Run "make", then trace it and any child processes:
 .Dl $ ktrace -i make
@@ -185,7 +200,8 @@ Disable tracing of all user-owned processes:
 .Xr kdump 1 ,
 .Xr truss 1 ,
 .Xr ktrace 2 ,
-.Xr utrace 2
+.Xr utrace 2 ,
+.Xr capsicum 4
 .Sh HISTORY
 The
 .Nm
