--- a/share/man/man5/services.5
+++ b/share/man/man5/services.5
@@ -1,3 +1,6 @@
+.\"-
+.\" SPDX-License-Identifier: BSD-3-Clause
+.\"
 .\" Copyright (c) 1983, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -30,7 +33,7 @@
 .Os
 .Sh NAME
 .Nm services
-.Nd service name data base
+.Nd internet service name and port number data base
 .Sh DESCRIPTION
 The
 .Nm
