rtld.1: clarify interaction between -u and -o
(cherry picked from commit 6a7819e43f938992304472054c83f4a6602a9e19)

--- a/libexec/rtld-elf/rtld.1
+++ b/libexec/rtld-elf/rtld.1
@@ -418,7 +418,9 @@ to find the binary to execute.
 .It Fl u
 Ignore all
 .Ev LD_
-environment variables that otherwise affect the dynamic
+environment variables and previous command line
+.Fl o
+options that otherwise affect the dynamic
 linker behavior.
 .It Fl v
 Display information about this run-time linker binary, then exit.
