intro.2: Add sys/syscall.h to SYNOPSIS
MFC after:	1 week
Co-authored-by: brooks
Reviewed by:	brooks, emaste, imp
Pull Request:	https://github.com/freebsd/freebsd-src/pull/1192

--- a/lib/libsys/intro.2
+++ b/lib/libsys/intro.2
@@ -37,6 +37,7 @@
 .Sh LIBRARY
 .Lb libc
 .Sh SYNOPSIS
+.In sys/syscall.h
 .In errno.h
 .Sh DESCRIPTION
 This section contains the system calls which comprise the
