intro.2: Add sys/syscall.h to SYNOPSIS
MFC after:	1 week
Co-authored-by: brooks
Reviewed by:	brooks, emaste, imp
Pull Request:	https://github.com/freebsd/freebsd-src/pull/1192

(cherry picked from commit 69ff2d754c1c8bd9c2b6cea28aa754e9f92f9613)

--- a/lib/libc/sys/intro.2
+++ b/lib/libc/sys/intro.2
@@ -36,6 +36,7 @@
 .Sh LIBRARY
 .Lb libc
 .Sh SYNOPSIS
+.In sys/syscall.h
 .In errno.h
 .Sh DESCRIPTION
 This section provides an overview of the system calls,
