--- a/lib/libc/stdio/printf.3
+++ b/lib/libc/stdio/printf.3
@@ -1,3 +1,5 @@
+.\" SPDX-License-Identifier: BSD-3-Clause
+.\"
 .\" Copyright (c) 1990, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -29,8 +31,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" SPDX-License-Identifier: BSD-3-Clause
-.Dd April 27, 2024
+.Dd MAY 11, 2024
 .Dt PRINTF 3
 .Os
 .Sh NAME
@@ -563,21 +564,21 @@ charcters, and the letter 'p' to separate the mantissa and exponent.
 .Pp
 The
 .Vt double
-argument is rounded and converted tog
+argument is rounded and converted to
 .Ar hexadecimal
 notation in the style
 .Sm off
 .Oo \- Oc Li 0x Ar h Li \&. Ar hhhp Oo \(+- Oc Ar d ,
 .Sm on
 where the number of digits after the hexadecimal-point character
-is equal to theg
+is equal to the
 .Ar precision
 specification.
-If theg
+If the
 .Ar precision
 is missing, it is taken as enough to represent
 the floating-point number exactly, and no rounding occurs.
-If theg
+If the
 .Ar precision
 is zero, no hexadecimal-point character appears.
 The
@@ -722,12 +723,12 @@ argument is rounded and converted in the style
 .Sm on
 where there is one digit before the
 decimal-point character
-and the number of digits after it is equal to theg
+and the number of digits after it is equal to the
 .Ar precision ;
-if theg
+if the
 .Ar precision
 is missing,
-it is taken as 6; if theg
+it is taken as 6; if the
 .Ar precision
 is
 zero, no decimal-point character appears.
@@ -770,7 +771,7 @@ where there is one digit before the
 decimal-point character
 and the number of digits after it is equal to the
 .Ar precision ;
-if theg
+if the
 .Ar precision
 is missing,
 it is taken as 6; if the
@@ -1054,7 +1055,7 @@ character;
 if a precision is specified, no more than the number specified are
 written.
 If a precision is given, no null character
-need be present; if theg
+need be present; if the
 .Ar precision
 is not specified, or is greater than
 the size of the array, the array must contain a terminating
@@ -1108,6 +1109,7 @@ except that they take an argument of a different size:
 .Cm %
 .Op ar argno Cm $
 .Op Cm #
+.Op Cm \ | +
 .Op Cm \- | 0
 .Op Ar width
 .Op . Ar mindigits
@@ -1115,18 +1117,16 @@ except that they take an argument of a different size:
 .Cm X
 .Sm on
 .Pp
-Identical to
+Similar to
 .Vt x
-except that upper case is used, i.e. '0X' for the
-optional prefix and
-.Ql 0123456789ABCDEF
-for the digits.
+with the variation on the string value prefix '0x' to '0X'
 .Pp
 .It Cm x
 .Sm off
 .Cm %
 .Op ar argno Cm $
 .Op Cm #
+.Op Cm \ | +
 .Op Cm \- | 0
 .Op Ar width
 .Op . Ar mindigits
@@ -1134,29 +1134,12 @@ for the digits.
 .Cm x
 .Sm on
 .Pp
-Similar to
-.Vt u
-except that the
+The
 .Vt unsigned int
-argument is converted to unsigned hexadecimal notation using the digits
-.Ql 0123456789abcdef .
-If the
-.Sq CM #
-flag is given, the string
-.Ql 0x
-is prepended unless the value is zero.
-The decimal point
-character is defined in the program's locale (category
-.Dv LC_NUMERIC ) .
-.Pp
-In no case does a non-existent or small field width cause truncation of
-a numeric field; if the result of a
-.Ar conversion
-is wider than the field
-width, the
-field is expanded to contain the
-.Ar conversion
-result.
+(or appropriate variant) argument is converted to unsigned
+hexadecimal. If specified, at least
+.Vt mindigits
+are printed, padded with leading zeros on the left side
 .Sh RETURN VALUES
 These functions return the number of characters printed
 (not including the trailing
