--- a/lib/libc/sys/access.2
+++ b/lib/libc/sys/access.2
@@ -27,7 +27,7 @@
 .\"
 .\"     @(#)access.2	8.2 (Berkeley) 4/1/94
 .\"
-.Dd March 30, 2021
+.Dd May 13, 2024
 .Dt ACCESS 2
 .Os
 .Sh NAME
@@ -149,6 +149,15 @@ Likewise for
 .Dv R_OK
 and
 .Dv W_OK .
+.Pp
+.Fn access ,
+.Fn eaccess
+and
+.Fn faccessat
+will always dereference symbolic links.
+If the symbolic link itself needs to be referenced,
+.Xr lstat 2
+should be used instead.
 .Sh RETURN VALUES
 .Rv -std
 .Sh ERRORS
