mac_do(4): fix typo
Reported by:	Gary Jennejohn <garyj@gmx.de>

(cherry picked from commit eaab8e4166a02212cb7d6aea4304834d9bcf5ff9)

--- a/share/man/man4/mac_do.4
+++ b/share/man/man4/mac_do.4
@@ -27,7 +27,7 @@ according to predefined rules.
 The exact set of kernel privileges granted are:
 .Bl -inset -compact -offset indent
 .It Dv PRIV_CRED_SETGROUPS
-.It Dv PRIV_CRET_SETUID
+.It Dv PRIV_CRED_SETUID
 .El
 .Pp
 The following
